# eguard-agent

./: .continues-handoff.md  .gitignore  ACCEPTANCE_CRITERIA.md  ANALYSIS_SUMMARY.md  BUILD.md  CLAUDE.md  Cargo.toml  EBPF_EVENT_ANALYSIS.md  FUNCTIONAL_GAPS_ANALYSIS.md  INVESTIGATION_FEDORA_FLOOD.md  MINIMAL_FIXES_REFERENCE.md  PROPOSED_FIX.md  README.md  autoresearch.checks.sh  autoresearch.config.json  autoresearch.jsonl  autoresearch.sh  bug-report-v15.0.3-macos-heartbeat.md  build.zig  context.md  nfpm.yaml
crates/acceptance/: AC_STATUS.md  Cargo.toml  README.md
crates/acceptance/src/: lib.rs  tests.rs  tests_atp_contract.rs  tests_bsl_contract.rs  tests_rsp_contract.rs  tests_tst_ver_contract.rs
crates/acceptance/tests/: ac_executable_crosscrate.rs  ac_executable_memory_layout.rs  ac_runtime_stubs_generated.rs  ac_tst_runtime_stubs.rs  ac_ver_runtime_stubs.rs  acceptance_criteria_generated.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: config.rs  detection_state.rs  lifecycle.rs  main.rs  platform.rs  test_support.rs
crates/agent-core/src/config/: bootstrap.rs  constants.rs  crypto.rs  defaults.rs  env.rs  file.rs  load.rs  paths.rs  tests.rs  types.rs  util.rs
crates/agent-core/src/detection_state/: tests.rs
crates/agent-core/src/lifecycle/: async_workers.rs  baseline.rs  bundle_path.rs  bundle_support.rs  command_control_pipeline.rs  command_pipeline.rs  compliance.rs  compliance_platform.rs  constants.rs  control_plane_pipeline.rs  detection_bootstrap.rs  detection_event.rs  ebpf_bootstrap.rs  ebpf_support.rs  emergency_rule.rs  enrollment.rs  event_txn.rs  feature_events.rs  feature_policy.rs  inventory.rs  kernel_integrity_scan.rs  memory_scan.rs  policy.rs  response_actions.rs  response_pipeline.rs  response_playbook.rs  rule_bundle_loader.rs  rule_bundle_verify.rs  runtime.rs  runtime_mode.rs  self_protect.rs  storage_hygiene.rs  telemetry.rs  telemetry_pipeline.rs  tests.rs  tests_baseline_seed_policy.rs  tests_det_stub_completion.rs  tests_ebpf_memory.rs  tests_ebpf_policy.rs  tests_network_profile_push.rs  (+14 more)
crates/agent-core/src/lifecycle/command_pipeline/: app_management.rs  command_utils.rs  config_change.rs  device_actions.rs  forensics.rs  handlers.rs  host_actions.rs  host_isolation_allowlist.rs  host_isolation_linux.rs  isolation_state.rs  on_demand_scan.rs  paths.rs  payloads.rs  sanitize.rs  (+4 more)
crates/detection/: Cargo.toml
crates/detection/src/: attack_coverage.rs  beaconing.rs  behavioral.rs  bench_detection.rs  calibration.rs  deception.rs  engine.rs  exploit.rs  fim.rs  information.rs  kernel_integrity.rs  lateral_movement.rs  layer1.rs  layer2.rs  layer3.rs  layer4.rs  layer5.rs  lib.rs  math.rs  memory_scanner.rs  policy.rs  replay.rs  sigma.rs  tamper.rs  tests.rs  tests_resource_budget.rs  tests_stub_completion.rs  threat_hunting.rs  types.rs  usb_control.rs  util.rs  vulnerability.rs  yara_engine.rs  zero_trust.rs
crates/detection/src/information/: compression.rs  concentration.rs  conformal.rs  cusum.rs  divergence.rs  dns.rs  entropy.rs  mutual.rs  spectral.rs  support.rs  tests.rs  transport.rs
crates/detection/src/layer2/: automaton.rs  defaults.rs  engine.rs  predicate.rs  rule.rs
crates/detection/src/layer4/: engine.rs  graph.rs  policy.rs  template.rs
crates/detection/src/layer5/: constants.rs  engine.rs  features.rs  math.rs  model.rs  tests.rs
crates/detection/src/memory_scanner/: tests.rs
crates/detection/src/yara_engine/: tests.rs
crates/eguard-tray/: Cargo.toml  build.rs
crates/eguard-tray/src/: app.rs  launcher.rs  macos.rs  main.rs  protocol.rs  state.rs  tray.rs
crates/grpc-client/: Cargo.toml  build.rs
crates/grpc-client/src/: buffer.rs  client.rs  lib.rs  proto_tests.rs  retry.rs  types.rs
crates/grpc-client/src/buffer/: tests.rs
crates/grpc-client/src/client/: client_grpc.rs  client_http.rs  tests.rs  tests_mappings.rs
crates/grpc-client/src/retry/: tests.rs
crates/grpc-client/src/types/: tests.rs
crates/pam/: Cargo.toml
crates/pam/src/: client.rs  launch.rs  lib.rs  secret.rs  types.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: container.rs  ebpf.rs  inventory.rs  kernel_integrity.rs  lib.rs  response.rs  tests.rs
crates/platform-linux/src/container/: tests.rs
crates/platform-linux/src/ebpf/: backend.rs  capabilities.rs  codec.rs  engine.rs  libbpf_backend.rs  replay.rs  replay_codec.rs  tests.rs  tests_kernel_caps.rs  tests_ring_contract.rs  types.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: lib.rs  windows_cmd.rs
crates/platform-windows/src/amsi/: mod.rs  scanner.rs
crates/platform-windows/src/compliance/: asr.rs  bitlocker.rs  credential_guard.rs  defender.rs  firewall.rs  mod.rs  registry.rs  screen_lock.rs  uac.rs  updates.rs
crates/platform-windows/src/enrichment/: mod.rs  network.rs  process.rs  user.rs
crates/platform-windows/src/etw/: audit.rs  codec.rs  consumer.rs  mod.rs  providers.rs  security_auditing.rs  security_eventlog.rs  session.rs
crates/platform-windows/src/inventory/: hardware.rs  hardware_detail.rs  mod.rs  network.rs  software.rs
crates/platform-windows/src/response/: forensics.rs  isolation.rs  mod.rs  process.rs  quarantine.rs
crates/platform-windows/src/self_protect/: acl.rs  anti_debug.rs  integrity.rs  mod.rs
crates/platform-windows/src/service/: eventlog.rs  lifecycle.rs  mod.rs
crates/platform-windows/src/wfp/: filters.rs  isolation.rs  mod.rs
crates/response/: Cargo.toml
crates/response/src/: capture.rs  errors.rs  kill.rs  lib.rs  quarantine.rs  tests.rs  tests_commands.rs
crates/response/src/capture/: tests.rs
crates/response/src/kill/: tests.rs
crates/response/src/quarantine/: tests.rs
crates/windows-bootstrap/: Cargo.toml  build.rs
crates/windows-bootstrap/src/: main.rs
crates/ztna/: Cargo.toml
crates/ztna/src/: bookmarks.rs  client.rs  commands.rs  discovery.rs  launcher.rs  lib.rs  listener.rs  protocol.rs  sessions.rs  tunnel.rs  types.rs  uri.rs  windows_tunnel.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: detection_inputs.rs  protobuf_parse.rs
(+501 files in other folders)
