[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
grpc-client = { path = "../grpc-client" }
detection = { path = "../detection" }
response = { path = "../response" }
platform-linux = { path = "../platform-linux" }
compliance = { path = "../compliance" }
baseline = { path = "../baseline" }
nac = { path = "../nac" }
self-protect = { path = "../self-protect" }
toml.workspace = true
sha2.workspace = true
aes-gcm = "0.10"
base64 = "0.22"
tar = "0.4"
zstd = "0.13"
ed25519-dalek = "2"
arc-swap = "1"
x509-parser = "0.16"
