[package]
name = "eguard-tray"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
clap.workspace = true
dirs.workspace = true
url.workspace = true
ztna = { path = "../ztna" }

[target.'cfg(target_os = "windows")'.dependencies]
tao.workspace = true
tray-icon.workspace = true
windows.workspace = true
image = { version = "0.25", default-features = false, features = ["ico"] }
