[package]
name = "grpc-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
protoc-bin-vendored.workspace = true
