[package]
name = "grpc-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tonic.workspace = true
prost.workspace = true
sha2.workspace = true
zstd = "0.13"

[build-dependencies]
tonic-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
hyper-util = { version = "0.1", features = ["tokio"] }
