[package]
name = "pam"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
url.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
