[package]
name = "platform-linux"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ebpf-libbpf = ["dep:libbpf-rs", "libbpf-rs/vendored"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
lru.workspace = true
crypto-accel = { path = "../crypto-accel" }
libbpf-rs = { version = "0.24", optional = true }
tracing.workspace = true
