[package]
name = "platform-windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
lru.workspace = true
tracing.workspace = true
crypto-accel = { path = "../crypto-accel" }

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
widestring.workspace = true
