[package]
name = "response"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
detection = { path = "../detection" }
regex = "1"

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true
