[package]
name = "windows-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { workspace = true, features = ["blocking"] }
windows.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
