[package]
name = "ztna"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
boringtun = "0.7"
base64.workspace = true
rand = "0.8"
